--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "author": "Tarik Tuzlaković",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.7.5",
+    "angular-ui-router": "^1.0.20",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.0",
     "single-spa": "^4.0.1",
+    "single-spa-angularjs": "^3.0.1",
     "single-spa-react": "^2.8.1"
   },
   "devDependencies": {
