--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.0",
+    "rx": "^4.1.0",
     "single-spa": "^4.0.1",
     "single-spa-angularjs": "^3.0.1",
-    "single-spa-react": "^2.8.1"
+    "single-spa-react": "^2.8.1",
+    "single-spa-vue": "^1.2.0",
+    "vue": "^2.5.17"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
