--- a/src/vue2/spa/package.json
+++ b/src/vue2/spa/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "single-spa-vue": "^1.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
