--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "klink",
     "demo",
     "spa",
+    "react",
+    "angular",
     "vue",
     "vuejs"
   ],
@@ -57,6 +59,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
+    "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "vue-loader": "^15.4.2",
