--- a/src/vue/spa/package.json
+++ b/src/vue/spa/package.json
@@ -55,6 +55,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
+    "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
