--- a/app4vue/package.json
+++ b/app4vue/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "klink-visualization-vue": "^0.2.9",
     "sass-loader": "^7.1.0",
     "single-spa-vue": "^1.1.0",
     "vue": "^2.5.16",
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "axios": "^0.18.0",
     "vue-template-compiler": "^2.5.16",
     "webpack-cli": "^3.0.8"
   },
